# serializer version: 1
# name: test_add_isolate[False-empty-False]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[False-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[False-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[False-empty-True]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[False-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[False-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[False-not_empty-False]
  dict({
    'default': False,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[False-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[False-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[False-not_empty-True]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[False-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[False-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-False-empty-False]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-False-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-False-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-False-empty-True]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-False-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-False-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-False-not_empty-False]
  dict({
    'default': False,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-False-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-False-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-False-not_empty-True]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-False-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-False-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-True-empty-False]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-True-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-True-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-True-empty-True]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-True-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-True-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-True-not_empty-False]
  dict({
    'default': False,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-True-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-True-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[None-True-not_empty-True]
  dict({
    'default': True,
    'id': '9pf',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[None-True-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': '9pf',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[None-True-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': '9pf',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[True-empty-False]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[True-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[True-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[True-empty-True]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[True-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[True-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[True-not_empty-False]
  dict({
    'default': False,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[True-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[True-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[True-not_empty-True]
  dict({
    'default': True,
    'id': 'bf1b993c',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[True-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'bf1b993c',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[True-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': 'bf1b993c',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-False-empty-False]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-False-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-False-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-False-empty-True]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-False-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-False-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-False]
  dict({
    'default': False,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-True]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-False-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-True-empty-False]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-True-empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-True-empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-True-empty-True]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-True-empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-True-empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            0,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-False]
  dict({
    'default': False,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-False].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': False,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-False].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': False,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-True]
  dict({
    'default': True,
    'id': 'isolate',
    'sequences': list([
    ]),
    'source_name': 'isolate',
    'source_type': 'bob',
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-True].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'isolate',
        'source_name': 'isolate',
        'source_type': 'bob',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_add_isolate[isolate-True-not_empty-True].2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Added Bob isolate as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'add',
        'isolates',
        list([
          list([
            1,
            dict({
              'default': True,
              'id': 'isolate',
              'sequences': list([
              ]),
              'source_name': 'isolate',
              'source_type': 'bob',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'add_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'B',
    }),
  })
# ---
# name: test_create[data0][db]
  list([
    dict({
      '_id': 'fb085f7f',
      'abbreviation': 'TMV',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    dict({
      '_id': 'fb085f7f.0',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus (TMV)',
      'diff': dict({
        '_id': 'fb085f7f',
        'abbreviation': 'TMV',
        'isolates': list([
        ]),
        'last_indexed_version': None,
        'lower_name': 'tobacco mosaic virus',
        'name': 'Tobacco mosaic virus',
        'reference': dict({
          'id': 'hxn167',
        }),
        'schema': list([
        ]),
        'verified': False,
        'version': 0,
      }),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create',
      'otu': dict({
        'id': 'fb085f7f',
        'name': 'Tobacco mosaic virus',
        'version': 0,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_create[data0][return]
  dict({
    'abbreviation': 'TMV',
    'id': 'fb085f7f',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus (TMV)',
      'id': 'fb085f7f.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: test_create[data1][db]
  list([
    dict({
      '_id': 'fb085f7f',
      'abbreviation': '',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'prunus virus a',
      'name': 'Prunus virus A',
      'reference': dict({
        'id': 'hxn167',
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    dict({
      '_id': 'fb085f7f.0',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Prunus virus A',
      'diff': dict({
        '_id': 'fb085f7f',
        'abbreviation': '',
        'isolates': list([
        ]),
        'last_indexed_version': None,
        'lower_name': 'prunus virus a',
        'name': 'Prunus virus A',
        'reference': dict({
          'id': 'hxn167',
        }),
        'schema': list([
        ]),
        'verified': False,
        'version': 0,
      }),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'create',
      'otu': dict({
        'id': 'fb085f7f',
        'name': 'Prunus virus A',
        'version': 0,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_create[data1][return]
  dict({
    'abbreviation': '',
    'id': 'fb085f7f',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Prunus virus A',
      'id': 'fb085f7f.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Prunus virus A',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: test_create_sequence[None-None-None][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'bf1b993c',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': None,
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[None-None-None][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[None-None-None][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'id': 'bf1b993c',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-None-None][sequence]
  dict({
    '_id': 'bf1b993c',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-None-host][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'bf1b993c',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[None-None-host][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[None-None-host][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'id': 'bf1b993c',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-None-host][sequence]
  dict({
    '_id': 'bf1b993c',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-seg-None][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'bf1b993c',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': None,
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[None-seg-None][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[None-seg-None][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'id': 'bf1b993c',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-seg-None][sequence]
  dict({
    '_id': 'bf1b993c',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-seg-host][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'bf1b993c',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[None-seg-host][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[None-seg-host][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'id': 'bf1b993c',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[None-seg-host][sequence]
  dict({
    '_id': 'bf1b993c',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-None-None][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': None,
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[foobar-None-None][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[foobar-None-None][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'id': 'foobar',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-None-None][sequence]
  dict({
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-None-host][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': None,
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[foobar-None-host][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[foobar-None-host][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'id': 'foobar',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-None-host][sequence]
  dict({
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': None,
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-seg-None][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': None,
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[foobar-seg-None][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[foobar-seg-None][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'id': 'foobar',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-seg-None][sequence]
  dict({
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': None,
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-seg-host][change]
  dict({
    '_id': 'bar.4',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created new sequence abc123 in Isolate A',
    'diff': list([
      list([
        'add',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'foobar',
              'accession': 'abc123',
              'definition': 'A made up sequence',
              'host': 'host',
              'isolate_id': 'baz',
              'otu_id': 'bar',
              'reference': dict({
                'id': 'foo',
              }),
              'segment': 'seg',
              'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
              'target': None,
            }),
          ]),
        ]),
      ]),
      list([
        'change',
        'version',
        list([
          3,
          4,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'create_sequence',
    'otu': dict({
      'id': 'bar',
      'name': 'Bar Virus',
      'version': 4,
    }),
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_create_sequence[foobar-seg-host][otu]
  dict({
    '_id': 'bar',
    'isolates': list([
      dict({
        'id': 'baz',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Bar Virus',
    'reference': dict({
      'id': 'foo',
    }),
    'verified': True,
    'version': 4,
  })
# ---
# name: test_create_sequence[foobar-seg-host][return]
  dict({
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'id': 'foobar',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_create_sequence[foobar-seg-host][sequence]
  dict({
    '_id': 'foobar',
    'accession': 'abc123',
    'definition': 'A made up sequence',
    'host': 'host',
    'isolate_id': 'baz',
    'otu_id': 'bar',
    'reference': dict({
      'id': 'foo',
    }),
    'segment': 'seg',
    'sequence': 'ATGCGTGTACTGAGAGTATATTTATACCACAC',
    'target': None,
  })
# ---
# name: test_get_fasta
  tuple(
    'prunus_virus_f.fa',
    '''
      >Prunus virus F|Isolate 8816-v2|abcd1234|27
      TGTTTAAGAGATTAAACAACCGCTTTC
      >Prunus virus F|Isolate A|AX12345|12
      ATAGAGGAGTTA
    ''',
  )
# ---
# name: test_get_sequence[None]
  dict({
    'accession': 'KX269872',
    'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
    'host': 'sweet cherry',
    'id': 'abcd1234',
    'otu_id': '6116cba1',
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'ref',
      'name': 'Reference A',
    }),
    'remote': None,
    'segment': None,
    'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    'target': None,
  })
# ---
# name: test_remove_isolate[bar]
  list([
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': True,
      'version': 1,
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Removed Isolate A',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'remove',
          'isolates',
          list([
            list([
              1,
              dict({
                'default': False,
                'id': 'bar',
                'sequences': list([
                ]),
                'source_name': 'A',
                'source_type': 'isolate',
              }),
            ]),
          ]),
        ]),
        list([
          'change',
          'verified',
          list([
            False,
            True,
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'remove_isolate',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bob',
      }),
    }),
    list([
      dict({
        '_id': 'abcd1234',
        'accession': 'KX269872',
        'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
        'host': 'sweet cherry',
        'isolate_id': 'cab8b360',
        'otu_id': '6116cba1',
        'reference': dict({
          'id': 'ref',
        }),
        'remote': None,
        'segment': None,
        'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
      }),
    ]),
  ])
# ---
# name: test_remove_isolate[cab8b360]
  list([
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'bar',
          'source_name': 'A',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': False,
      'version': 1,
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Removed Isolate 8816-v2 and set Isolate A as default',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'id',
          ]),
          list([
            'cab8b360',
            'bar',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'source_name',
          ]),
          list([
            '8816-v2',
            'A',
          ]),
        ]),
        list([
          'remove',
          list([
            'isolates',
            0,
            'sequences',
          ]),
          list([
            list([
              0,
              dict({
                '_id': 'abcd1234',
                'accession': 'KX269872',
                'definition': 'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
                'host': 'sweet cherry',
                'isolate_id': 'cab8b360',
                'otu_id': '6116cba1',
                'reference': dict({
                  'id': 'ref',
                }),
                'remote': None,
                'segment': None,
                'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
              }),
            ]),
          ]),
        ]),
        list([
          'remove',
          'isolates',
          list([
            list([
              1,
              dict({
                'default': False,
                'id': 'bar',
                'sequences': list([
                ]),
                'source_name': 'A',
                'source_type': 'isolate',
              }),
            ]),
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'remove_isolate',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bob',
      }),
    }),
    list([
    ]),
  ])
# ---
# name: test_remove_sequence
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_remove_sequence.1
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Removed sequence baz from Isolate 8816-v2',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'remove',
        list([
          'isolates',
          0,
          'sequences',
        ]),
        list([
          list([
            0,
            dict({
              '_id': 'baz',
              'accession': '123abc',
              'definition': 'Apple virus organism',
              'host': '',
              'isolate_id': 'cab8b360',
              'otu_id': '6116cba1',
              'segment': 'RNA-B',
              'sequence': 'ATGC',
            }),
          ]),
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'remove_sequence',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_set_default
  dict({
    'default': True,
    'id': 'bar',
    'sequences': list([
    ]),
    'source_name': 'A',
    'source_type': 'isolate',
  })
# ---
# name: test_set_default.1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': False,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
      dict({
        'default': True,
        'id': 'bar',
        'source_name': 'A',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_set_default.2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Set Isolate A as default',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'default',
        ]),
        list([
          True,
          False,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          1,
          'default',
        ]),
        list([
          False,
          True,
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'set_as_default',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update[data0]
  dict({
    'abbreviation': 'TMV',
    'id': '6116cba1',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'sequences': list([
        ]),
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'issues': dict({
      'empty_isolate': list([
        'cab8b360',
      ]),
      'empty_otu': False,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': 0,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Changed name to Tobacco mosaic virus and changed abbreviation to TMV and modified schema',
      'id': '6116cba1.1',
      'method_name': <HistoryMethod.edit: 'edit'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 'bf1b993c',
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'hxn167',
      'name': 'Reference A',
    }),
    'remote': None,
    'verified': False,
    'version': 1,
  })
# ---
# name: test_update[data0][db]
  list([
    dict({
      '_id': '6116cba1',
      'abbreviation': 'TMV',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': False,
      'version': 1,
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Changed name to Tobacco mosaic virus and changed abbreviation to TMV and modified schema',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          'abbreviation',
          list([
            'PVF',
            'TMV',
          ]),
        ]),
        list([
          'change',
          'lower_name',
          list([
            'prunus virus f',
            'tobacco mosaic virus',
          ]),
        ]),
        list([
          'change',
          'name',
          list([
            'Prunus virus F',
            'Tobacco mosaic virus',
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'edit',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bf1b993c',
      }),
    }),
  ])
# ---
# name: test_update_isolate
  dict({
    'default': True,
    'id': 'cab8b360',
    'sequences': list([
    ]),
    'source_name': '0',
    'source_type': 'strain',
  })
# ---
# name: test_update_isolate.1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '0',
        'source_type': 'strain',
      }),
    ]),
    'last_indexed_version': 0,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_update_isolate.2
  dict({
    '_id': '6116cba1.1',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Renamed Isolate 8816-v2 to Strain 0',
    'diff': list([
      list([
        'change',
        'version',
        list([
          0,
          1,
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'source_name',
        ]),
        list([
          '8816-v2',
          '0',
        ]),
      ]),
      list([
        'change',
        list([
          'isolates',
          0,
          'source_type',
        ]),
        list([
          'isolate',
          'strain',
        ]),
      ]),
    ]),
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': 'edit_isolate',
    'otu': dict({
      'id': '6116cba1',
      'name': 'Prunus virus F',
      'version': 1,
    }),
    'reference': dict({
      'id': 'hxn167',
    }),
    'user': dict({
      'id': 'bob',
    }),
  })
# ---
# name: test_update_sequence[ATAGAG GAGTA\nAGAGTGA][db]
  list([
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': True,
      'version': 1,
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Edited sequence abcd1234 in Isolate 8816-v2',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'accession',
          ]),
          list([
            'KX269872',
            '987xyz',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'definition',
          ]),
          list([
            'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'Hello world',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'host',
          ]),
          list([
            'sweet cherry',
            'Apple',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'sequence',
          ]),
          list([
            'TGTTTAAGAGATTAAACAACCGCTTTC',
            'ATAGAGGAGTAAGAGTGA',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'segment',
          ]),
          list([
            None,
            'RNA-A',
          ]),
        ]),
        list([
          'change',
          'verified',
          list([
            False,
            True,
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'edit_sequence',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bob',
      }),
    }),
    dict({
      '_id': 'abcd1234',
      'accession': '987xyz',
      'definition': 'Hello world',
      'host': 'Apple',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'reference': dict({
        'id': 'ref',
      }),
      'remote': None,
      'segment': 'RNA-A',
      'sequence': 'ATAGAGGAGTAAGAGTGA',
    }),
  ])
# ---
# name: test_update_sequence[ATAGAG GAGTA\nAGAGTGA][return]
  dict({
    'accession': '987xyz',
    'definition': 'Hello world',
    'host': 'Apple',
    'id': 'abcd1234',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'ref',
    }),
    'remote': None,
    'segment': 'RNA-A',
    'sequence': 'ATAGAGGAGTAAGAGTGA',
  })
# ---
# name: test_update_sequence[None][db]
  list([
    dict({
      '_id': '6116cba1',
      'abbreviation': 'PVF',
      'isolates': list([
        dict({
          'default': True,
          'id': 'cab8b360',
          'source_name': '8816-v2',
          'source_type': 'isolate',
        }),
      ]),
      'last_indexed_version': 0,
      'lower_name': 'prunus virus f',
      'name': 'Prunus virus F',
      'reference': dict({
        'id': 'hxn167',
      }),
      'remote_id': None,
      'schema': list([
      ]),
      'verified': True,
      'version': 1,
    }),
    dict({
      '_id': '6116cba1.1',
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Edited sequence abcd1234 in Isolate 8816-v2',
      'diff': list([
        list([
          'change',
          'version',
          list([
            0,
            1,
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'accession',
          ]),
          list([
            'KX269872',
            '987xyz',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'definition',
          ]),
          list([
            'Prunus virus F isolate 8816-s2 segment RNA2 polyprotein 2 gene, complete cds.',
            'Hello world',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'host',
          ]),
          list([
            'sweet cherry',
            'Apple',
          ]),
        ]),
        list([
          'change',
          list([
            'isolates',
            0,
            'sequences',
            0,
            'segment',
          ]),
          list([
            None,
            'RNA-A',
          ]),
        ]),
        list([
          'change',
          'verified',
          list([
            False,
            True,
          ]),
        ]),
      ]),
      'index': dict({
        'id': 'unbuilt',
        'version': 'unbuilt',
      }),
      'method_name': 'edit_sequence',
      'otu': dict({
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'version': 1,
      }),
      'reference': dict({
        'id': 'hxn167',
      }),
      'user': dict({
        'id': 'bob',
      }),
    }),
    dict({
      '_id': 'abcd1234',
      'accession': '987xyz',
      'definition': 'Hello world',
      'host': 'Apple',
      'isolate_id': 'cab8b360',
      'otu_id': '6116cba1',
      'reference': dict({
        'id': 'ref',
      }),
      'remote': None,
      'segment': 'RNA-A',
      'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
    }),
  ])
# ---
# name: test_update_sequence[None][return]
  dict({
    'accession': '987xyz',
    'definition': 'Hello world',
    'host': 'Apple',
    'id': 'abcd1234',
    'isolate_id': 'cab8b360',
    'otu_id': '6116cba1',
    'reference': dict({
      'id': 'ref',
    }),
    'remote': None,
    'segment': 'RNA-A',
    'sequence': 'TGTTTAAGAGATTAAACAACCGCTTTC',
  })
# ---
